PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

- pts-core: Add few more cases of error detection on failed test install
- pts-core: Round download size totals in the concise display mode for large files
- pts-core: Add missing PreInstallMessage and PostInstallMessage to the OpenBenchmarking.org test profile schema and writer
- pts_Graph: Assume any version of Google Chrome/Chromium can render SVG
- toggle-screensaver: Support doing "xscreensaver-command -exit" when needed
- phodevi: Add more stock fallback display modes
- phodevi: Ensure MB/GB are reported on OS X memory strings
- phodevi: Workaround Linux 3.10 kernel reporting bogus frequencies for scaling_max_freq on some Intel CPUs
- phodevi: Support prepending the graphics card / AIB vendor on GPU strings

Phoronix Test Suite 4.8 Milestone 2
6 July 2013

- pts-core: Expand Mandriva Linux external dependency support to distributions having urpmi
- pts-core: Add Apple OS X font paths for use by the GD graph renderer
- pts-core: Add "/usr/lib64/" to the automated external dependency verification path
- pts-core: Allow passing multiple test identifiers to remove with remove-from-result-file command
- pts-core: Give a warning when the results viewer opens in the KDE Konqueror web-browser
- phodevi: Break operating system string at "("
- phodevi: Don't return "n/a" from LSB release strings
- phodevi: IceWM window manager detection
- phodevi: Add gpu.temp safety check to prevent against AMD Catalyst OverDrive sending garbage
- phodevi: Fix for XRandR resolution query on XMir
- phodevi: Support using systemd-detect-virt as fallback for detecting Linux virtualization method

Phoronix Test Suite 4.8 Milestone 1
20 June 2013

- pts-core: Don't show null error strings on failed test installations
- pts-core: Allow test profiles to pass min/max data results through JSON to graphs using MIN_ and MAX_ prefixes
- pts-core: Support displaying min/max data from the concise (default) display mode text output